Improved scaling at small - medium screen sizes. Horizontal will scale currently on phones

--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -91,14 +91,14 @@
                 of.
             </p>
 
-            <div class="skills">
-                <ul>Skills:</ul>
-                <li.s>C#</li>
+            <!-- <div class="skills">
+                <ul>Skills:
+                    <li>C#</li>
                     <li>Unity</li>
                     <li>Git</li>
-            </div>
+                </ul>
 
-
+            </div> -->
 
         </div>
 
@@ -230,7 +230,7 @@
                 <br>
 
                 Later on in the project we were given feedback that we needed to improve game feel. Using <i>Cinemachine
-                    impulse</i> allowed me add camera shake,
+                impulse</i> allowed me add camera shake,
                 via an event. This meant that when the player dealt damage to enemies, used a special attack or took
                 damage. There would be a small amount
                 of shake. This achieved the intended effect of improving combat feel.
