--- a/Projects/Dissertation.html
+++ b/Projects/Dissertation.html
@@ -62,12 +62,12 @@
 
                 <br>
 
-                <div class="skills">
+                <!-- <div class="skills">
                     <li>C#</li>
                     <li>Unity</li>
                     <li>R</li>
                     <li>LaTeX</li>
-                </div>
+                </div> -->
 
                 <div class="player-container">
                     <div id="player"> </div>                 
