--- a/Projects/Penumbra.html
+++ b/Projects/Penumbra.html
@@ -57,11 +57,11 @@
 
                 <h2>Grade Awarded - 2:1</h2>
 
-                <div class="skills">
+                <!-- <div class="skills">
                     <li>C#</li>
                     <li>Unity</li>
                     <li>Git</li>
-                </div>
+                </div> -->
 
                 <div class="player-container">
                     <div id="player"> </div>                 
