Improved formatting on index page, increased size of title elements and changed font

--- a/Projects/Penumbra.html
+++ b/Projects/Penumbra.html
@@ -39,7 +39,7 @@
 <body>
     <div class="main">      
             <div class=title>
-                <h1><center>Thomas Billett</center></h1>
+                <h1>Thomas Billett</h1>
             </div>
             
             <br>
