--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <!-- <img src="Images/penumbra.png" alt="AI Page" width=”500″ height=”600″> -->
     <div class="main">        
             <div class=title>
-                <h1><center>Thomas Billett</center></h1>
+                <h1>Thomas Billett</h1>
+                <h5>Computing Graduate</h5>
                 <!-- <button onclick="myFunction()">Toggle dark mode</button> -->
             </div>
 
@@ -50,9 +51,15 @@
             <hr>
             <br>
 
-            <div class="smallbox">
-                <h1>Welcome to my website</h1>
-                <h2>Hello I am Thomas Billett a recent student graduate from Falmouth University.</h2>
+            <div class="smallbox l">
+                <h1><center>Welcome to my Portfolio</center></h1>
+                <h2>Hello I am Thomas Billett a student graduate from Falmouth University!</h2>
+                    <br>
+                    <h3><i>This is a work in progress.</i></h3>
+                    <br>
+                    <h2>The Solar Spark page is complete under the <i>'Portfolio'</i> tab</h2>
+                
+                 
             </div>
 
             <br>
