--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -42,9 +42,7 @@
 
     <div class="main">
         <div class=title>
-            <h1>
-                <center>Thomas Billett</center>
-            </h1>
+            <h1>Thomas Billett</h1>      
         </div>
 
         <br>
