--- a/about-me.html
+++ b/about-me.html
@@ -28,7 +28,7 @@
     <div class="main"> 
     
     <div class=title>
-        <h1><center>Thomas Billett</center></h1>
+        <h1>Thomas Billett</h1>
     </div>
 
 
