--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 <body>
     <div class="main">   
         <div class=title>
-            <h1><center>Contact</center></h1>
+            <h1>Contact</h1>
         </div>
 
         <br>           
