--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     <div class="main">
         
     <div class=title>
-        <h1><center>Portfolio</center></h1>
+        <h1>Portfolio</h1>
     </div>
 
         <br>           
