Attempted to add fade animation to pages, added gitginore for node modules

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
-<html lang="en">
+<html lang="en" class="swup-enabled">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="CSS/contact.css">
     <link rel="stylesheet" href="CSS/colours.css">
     <link rel="stylesheet" href="CSS/contentboxes.css">
@@ -12,20 +13,34 @@
     <link rel="stylesheet" href="CSS/topnav.css">
     <link rel="stylesheet" href="CSS/background.css">
     <link rel="stylesheet" href="CSS/buttons.css">
+    <link rel="stylesheet" href="CSS/transitions.css">
 
+    <script defer src="node_modules/swup/dist/Swup."></script>
+    <script defer src="script.js"></script>
 </head>
 
-<div class="topnav-alignment">
+<!-- <div class="topnav-alignment">
     <nav class="topnav">
         <a href="index.html">Home</a>
         <a href="about-me.html">CV</a>
         <a href="portfolio.html">Portfolio</a>
         <a class="active"  href="contact.html">Contact</a>
     </nav>
-</div>
+</div> -->
 <footer class="footer">© 2023 Thomas Billett. All Rights Reserved.</footer>
 
 <body>
+    <main id="swup" class="transition-fade">
+
+    <div class="topnav-alignment">
+        <nav class="topnav">
+            <a href="index.html">Home</a>
+            <a href="about-me.html">CV</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a class="active"  href="contact.html">Contact</a>
+        </nav>
+    </div>
+    
     <div class="main">   
         <div class=title>
             <h1>Contact</h1>
@@ -54,6 +69,7 @@
         </div>
         
     </div>
+    </main>
 </body>   
 
 </html> 
