Reverted changes to topnav bar

--- a/contact.html
+++ b/contact.html
@@ -15,31 +15,22 @@
     <link rel="stylesheet" href="CSS/buttons.css">
     <link rel="stylesheet" href="CSS/transitions.css">
 
-    <script defer src="node_modules/swup/dist/Swup."></script>
-    <script defer src="script.js"></script>
+    <!-- <script defer src="node_modules/swup/dist/Swup."></script>
+    <script defer src="script.js"></script> -->
 </head>
 
-<!-- <div class="topnav-alignment">
+<div class="topnav-alignment">
     <nav class="topnav">
         <a href="index.html">Home</a>
         <a href="about-me.html">CV</a>
         <a href="portfolio.html">Portfolio</a>
         <a class="active"  href="contact.html">Contact</a>
     </nav>
-</div> -->
+</div>
 <footer class="footer">© 2023 Thomas Billett. All Rights Reserved.</footer>
 
 <body>
     <main id="swup" class="transition-fade">
-
-    <div class="topnav-alignment">
-        <nav class="topnav">
-            <a href="index.html">Home</a>
-            <a href="about-me.html">CV</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a class="active"  href="contact.html">Contact</a>
-        </nav>
-    </div>
     
     <div class="main">   
         <div class=title>
