--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="CSS/buttons.css">
     <link rel="stylesheet" href="CSS/transitions.css">
 
-    <script defer src="node_modules/swup/dist/Swup.modern.js"></script>
-    <script defer src="script.js"></script>
+    <!-- <script defer src="node_modules/swup/dist/Swup.modern.js"></script>
+    <script defer src="script.js"></script> -->
     <script>
         function myFunction() {
            var element = document.body;
@@ -33,29 +33,18 @@
 
 </head>
 
-<!-- <div class="topnav-alignment">
+<div class="topnav-alignment">
     <nav class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="about-me.html">CV</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </nav>
-</div> -->
-
-    <footer class="footer">© 2023 Thomas Billett. All Rights Reseerved.</footer>
-
+</div>
+<footer class="footer">© 2023 Thomas Billett. All Rights Reseerved.</footer>
 
 <body>
     <main id="swup" class="transition-fade">
-
-    <div class="topnav-alignment">
-        <nav class="topnav">
-            <a href="index.html">Home</a>
-            <a href="about-me.html">CV</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a class="active"  href="contact.html">Contact</a>
-        </nav>
-    </div>
     <!-- <img src="Images/penumbra.png" alt="AI Page" width=”500″ height=”600″> -->
         <div class="main">        
                 <div class=title>
