--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="CSS/buttons.css">
     <link rel="stylesheet" href="CSS/transitions.css">
 
-    <script defer src="node_modules/swup/dist/Swup.modern.js"></script>
-    <script defer src="script.js"></script>
+    <!-- <script defer src="node_modules/swup/dist/Swup.modern.js"></script>
+    <script defer src="script.js"></script> -->
 </head>
 
 <div class="topnav-alignment">
