Added bold to first parts of bullet points, updated behaviour tree image

--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -108,29 +108,30 @@
         <div class="smallbox l">
             <h3>My Roles</h3>
                 <p class="description">
-                <ul><b>Lead Programmer:</b> </ul>
-                <ul><b>AI Programmer:</b> This was my specialism in the project and where a large amount of my efforts
-                    were focused. Created AI systems for enemies
+                <ul class="innerfirst">
+                <li><b>Lead Programmer:</b></li>
+                <li><b>AI Programmer:</b> This was my specialism in the project and where a large amount of my efforts
+                    were focused. Created AI systems for enemies</li>
                 </ul>
 
                 <br>
                 <h3>Contributions</h3>
 
                 <ul>
-                    <li><b>Enemy AI & Animations:</b> I created sword and axe enemy variant, hooked up animations and
+                    <li><b>Enemy AI & Animations: </b> I created sword and axe enemy variant, hooked up animations and
                         repurposed existing AI functionality
                         to create the final boss.
                     <li>
-                    <li><b>Input System:</b>Used Unity's input package to create a robust system, allowing for
+                    <li><b>Input System: </b>Used Unity's input package to create a robust system, allowing for
                         customisation for whatever we needed, also included input prompts
                         with a corresponding icon regardless of what platform</li>
-                    <li><b>Menu System:</b>Using simple button elements, I constructed the main menu, pause menu and
+                    <li><b>Menu System: </b>Using simple button elements, I constructed the main menu, pause menu and
                         settings menu. This also included a rebinding screen.</li>
-                    <li><b>Camera:</b>The Cinemachine package was used to get a basic camera, then finer details were
+                    <li><b>Camera: </b>The Cinemachine package was used to get a basic camera, then finer details were
                         adjusted to get the camera we desired.</li>
-                    <li><b>Build Creation:</b>I was responsible for creating weekly builds, to ensure frequent
+                    <li><b>Build Creation: </b>I was responsible for creating weekly builds, to ensure frequent
                         playtesting.</li>
-                    <li><b>Trailer Materials:</b>I recorded gameplay footage, collected resources and materials for use
+                    <li><b>Trailer Materials: </b>I recorded gameplay footage, collected resources and materials for use
                         in the trailer </li>
                     <li><b>Bugfixing:</b>
                 </ul>
@@ -146,14 +147,16 @@
         <!-- Detailed AI dev box: -->
         <div class="smallbox l">
             <h3>Enemy AI</h3>
-            <p class="description">
 
-            </p>
 
-            <!-- <div class=".container">
-                    <img src="../Images/nier.jpg">
-                </div> -->
+            <div class=".container">
+                    <img src="../Images/BehaviourTree.png">
+                </div>
         </div>
+
+        <br>
+        <hr>
+        <br>
 
         <!-- Input system dev box: -->
         <div class="smallbox l">
@@ -169,10 +172,9 @@
         </div>
 
         <br>
+        <hr>
         <br>
 
-        <br>
-        <br>
 
         <!-- Menu box: -->
         <div class="smallbox l">
@@ -185,8 +187,9 @@
                     <img src="../Images/nier.jpg">
                 </div> -->
         </div>
-
+     
         <br>
+        <hr>
         <br>
 
         <!-- Detailed camera dev info: -->
@@ -200,6 +203,7 @@
 
             <div class=".container">
                 <img src="../Images/nier.jpg">
+                <p class="reference">NieR: Automata by Square Enix.</p>
             </div>
 
             <p class="description">
