--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -85,7 +85,7 @@
             </div>
 
             <p class="description">
-                Solar Spark was created in my final year at Falmouth University and it is the project I am most proud
+                Solar Spark was created in my final year at Falmouth University with a 6 month development time and it is the project I am most proud
                 of.
             </p>
 
@@ -109,9 +109,9 @@
             <h3>My Roles</h3>
                 <p class="description">
                 <ul class="innerfirst">
-                <li><b>Lead Programmer:</b></li>
+                <!-- <li><b>Lead Programmer:</b></li> -->
                 <li><b>AI Programmer:</b> This was my specialism in the project and where a large amount of my efforts
-                    were focused. Created AI systems for enemies</li>
+                    were focused. Created AI systems for enemies.</li>
                 </ul>
 
                 <br>
@@ -124,16 +124,16 @@
                     <li>
                     <li><b>Input System: </b>Used Unity's input package to create a robust system, allowing for
                         customisation for whatever we needed, also included input prompts
-                        with a corresponding icon regardless of what platform</li>
+                        with a corresponding icon regardless of what platform.</li>
                     <li><b>Menu System: </b>Using simple button elements, I constructed the main menu, pause menu and
                         settings menu. This also included a rebinding screen.</li>
                     <li><b>Camera: </b>The Cinemachine package was used to get a basic camera, then finer details were
                         adjusted to get the camera we desired.</li>
                     <li><b>Build Creation: </b>I was responsible for creating weekly builds, to ensure frequent
                         playtesting.</li>
-                    <li><b>Trailer Materials: </b>I recorded gameplay footage, collected resources and materials for use
-                        in the trailer </li>
-                    <li><b>Bugfixing:</b>
+                    <li><b>Trailer Materials:</b>I recorded gameplay footage, collected resources and materials for use
+                        in the trailer.</li>
+                    <li><b>Bugfixing:</b>Any bugs that were found during playtesting were noted down and fixed by me and the other programmers.</li>
                 </ul>
 
                 <i>A more detailed version of my roles and contributions is further below</i>
@@ -147,11 +147,31 @@
         <!-- Detailed AI dev box: -->
         <div class="smallbox l">
             <h3>Enemy AI</h3>
+            <p class="description">
+                To create the AI, I decided to use Behaviour trees for the project. This was for several reasons:
+            </p>
+                <ul>
+                    <li>Ease of troubleshooting due to its visual nature.</li>
+                    <li>Modularity allows nodes to be interchanged to quickly create or modify behaviours.</li>
+                    <li>Familarity with this approach.</li>
+                </ul>
+            <p class="description">
+                I used a package from the asset store to avoid having to create a behaviour tree system from scratch which would have taken precious time from the project <i>see below</i>.
+            </p>
+           
+
 
 
             <div class=".container">
-                    <img src="../Images/BehaviourTree.png">
-                </div>
+                <img src="../Images/BehaviourTree.png">
+                <p class="reference">Generic enemy behaviour tree, from <a href="https://www.youtube.com/watch?v=SgrG6uAZDHE">TheKiwiCoder</a> package</p>
+            </div>
+
+            <br>
+
+            <p class="description">
+
+            </p>
         </div>
 
         <br>
