--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,8 @@
             <a id="dissertation-anchor"></a>
             <div class="smallbox">
                 <h1>
-                    <span class="aligncenter">Dissertation</span>
+                    <span class="aligncenter">Dissertation - How does difficulty influence a player’s view of
+                        Artificial Intelligence?</span>
                 </h1>
                 <div class="container">
                     <a href="Projects/Dissertation.html">
