Added css to colour interactable links clearly

--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -165,8 +165,9 @@
 
             <br>
 
+            <h3>Boss AI</h3>
             <p class="description">
-
+                
             </p>
         </div>
 
@@ -187,6 +188,11 @@
                 I encouraged moving over to the new Unity input system as quickly as possible. As the longer this took the more code we would have to refactor and the less flexibility we would have with button interactions.
                 <!-- For the combat system we wanted a simple
                 easy to pickup control scheme. So we decided upon a light attack & wide attack, a dash to quickly traverse the battlefield. -->
+                <br>
+
+                In additon, I used the <a id="link" href="https://assetstore.unity.com/packages/tools/gui/input-icons-for-tmpro-213736">InputIcons</a> package to create dynamic icon prompts in the tutorial, updating when the user
+                switches to a different input device.  
+ 
                 
             </p>
 
