--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -18,10 +18,15 @@
     <script>
         // Create a YouTube player when the API is ready
         function onYouTubeIframeAPIReady() {
-            var player = new YT.Player('player', {
+            var playerTrailer = new YT.Player('playerTrailer', {
                 height: '100%',
                 width: '100%',
                 videoId: 'qgrneknSSBU',
+            });       
+            var playerSobek = new YT.Player('playerSobek', {
+                height: '100%',
+                width: '100%',
+                videoId: 'srYHbdRGF7A',
             });
         }
     </script>
@@ -61,7 +66,7 @@
 
             <!-- YouTube player embed -->
             <div class="player-container">
-                <div id="player"></div>
+                <div id="playerTrailer"></div>
             </div>
 
             <h3>Introduction</h3>
@@ -165,7 +170,9 @@
             
             <h3>Boss AI</h3>
             <p class="description">
-                
+                <div class="player-container">
+                    <div id="playerSobek"></div>
+                </div>
             </p>
         </div>
 
