Added scrollbars back, began work on dissertation page

--- a/Projects/Dissertation.html
+++ b/Projects/Dissertation.html
@@ -47,27 +47,27 @@
 
 
             <div class="smallbox l">
-                <h1>Dissertation 
-                    <a href="../portfolio.html#dissertation-anchor">
-                        <button class = "backbutton">Back</button>
-                    </a>
-                </h1>
+                <h1>Dissertation</h1>
+                
                 <br>
                 
-                <h2>2:2
-                    <a href="dissertation.pdf" target="_blank" rel="noopener noreferrer">
-                        <button class = "downloadbutton">Download PDF</button>
-                    </a> 
-                </h2>       
+                <h3>Grade Awarded - 2:2</h3>                  
 
                 <br>
 
-                <!-- <div class="skills">
-                    <li>C#</li>
-                    <li>Unity</li>
-                    <li>R</li>
-                    <li>LaTeX</li>
-                </div> -->
+                <h3>Introduction</h3>
+
+                <p class = "description">
+                    My dissertation is about understanding how players respond to difficulty in video games. To achieve this goal I constructed a
+                    small enclosed level. In which, the player would have to navigate to the end whilst finding as many collectables as possible. This
+                    test would then be repeated an additional 3 times, with a different AI being swapped in.
+                </p>
+
+                <a href="dissertation.pdf" target="_blank" rel="noopener noreferrer">
+                    <button class = "downloadbutton">Download PDF</button>
+                </a> 
+
+                <br>
 
                 <div class="player-container">
                     <div id="player"> </div>                 
