--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="contact.html">Contact</a>
     </nav>
 </div>
-<footer class="footer">© 2023 Thomas Billett. All Rights Reseerved.</footer>
+<footer class="footer">© 2023 Thomas Billett. All Rights Reserved.</footer>
 
 <body>
     <main id="swup" class="transition-fade">
