Added a return button at the top right of the portolio pages, still working on scaling

--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -54,11 +54,14 @@
 
         <!-- Game introduction-->
         <div class="smallbox l">
-            <h1>Solar Spark - CaliCat Studios
-                <!-- <a href="../portfolio.html">
-                    <button class="backbutton">Back</button>
-                </a> -->
-            </h1>
+            <h1>Solar Spark - CaliCat Studios</h1>
+        
+
+            
+
+            <a href="../portfolio.html">
+                <button class = "returnbutton">Return</button>
+            </a>
 
             <br>
 
@@ -111,31 +114,30 @@
         <div class="smallbox l">
             <h3>My Roles</h3>
                 <p class="description">
-                <ul class="innerfirst">
-                <li><b>AI Programmer:</b> This was my specialism in the project and where a large amount of my efforts
-                    were focused. Created AI systems for enemies.</li>
-                </ul>
+                    <ul class="innerfirst">
+                        <li><b>AI Programmer:</b> This was my specialism in the project and where a large amount of my efforts
+                            were focused. Created AI systems for enemies.</li>
+                    </ul>
 
-                <br>
-                <h3>Contributions</h3>
+                    <h3>Contributions</h3>
 
-                <ul>
-                    <li><b>Enemy AI & Animations: </b> I created the sword and axe enemy variants, configured animations and
-                        repurposed existing AI functionality to create the final boss.</li>                                        
-                    <li><b>Input System: </b>Used Unity's input package to create a robust system, allowing for
-                        customisation for whatever we needed. Also included input prompts
-                        with a corresponding icon for several different controller.</li>
-                    <li><b>Menu System:</b>Using simple button elements, I constructed the main menu, pause menu and
-                        settings menu,</li>
-                    <li><b>Camera:</b>The Cinemachine package was used to get a basic camera, then finer details were
-                        adjusted to get the camera we desired.</li>
-                    <li><b>Build Creation:</b>I was responsible for creating weekly builds to ensure frequent
-                        playtesting.</li>
-                    <li><b>Debug Tools:</b>To reduce designer <i>'blockers'</i> I created a noclip system and a checkpoint system.</li>
-                    <li><b>Bugfixing:</b>Any bugs that were found during playtesting were noted down and fixed by me and the other programmers.</li>
-                </ul>
+                    <ul>
+                        <li><b>Enemy AI & Animations: </b> I created the sword and axe enemy variants, configured animations and
+                            repurposed existing AI functionality to create the final boss.</li>                                        
+                        <li><b>Input System: </b>Used Unity's input package to create a robust system, allowing for
+                            customisation for whatever we needed. Also included input prompts
+                            with a corresponding icon for several different controller.</li>
+                        <li><b>Menu System: </b>Using simple button elements, I constructed the main menu, pause menu and
+                            settings menu,</li>
+                        <li><b>Camera: </b>The Cinemachine package was used to get a basic camera, then finer details were
+                            adjusted to get the camera we desired.</li>
+                        <li><b>Build Creation: </b>I was responsible for creating weekly builds to ensure frequent
+                            playtesting.</li>
+                        <li><b>Debug Tools: </b>To reduce designer <i>'blockers'</i> I created a noclip system and a checkpoint system.</li>
+                        <li><b>Bugfixing: </b>Any bugs that were found during playtesting were noted down and fixed by me and the other programmers.</li>
+                    </ul>
 
-                <i>A more detailed version of my roles and contributions is further below</i>
+                    <i>A more detailed version of my roles and contributions is further below</i>
                 </p>
         </div>
 
