--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,7 @@
             <a id="dissertation-anchor"></a>
             <div class="smallbox">
                 <h1>
-                    <span class="aligncenter">Dissertation - How does difficulty influence a player’s view of
-                        Artificial Intelligence?</span>
+                    <span class="aligncenter">Dissertation - Perscription of AI difficulty</span>
                 </h1>
                 <div class="container">
                     <a href="Projects/Dissertation.html">
