--- a/about-me.html
+++ b/about-me.html
@@ -46,10 +46,10 @@
             <h1>Curriculum Vitae</h1>
             <div class="buttoncontainer">
                 <a href="Projects/Thomas Billett CV.pdf" target="_blank" rel="noopener noreferrer">
-                    <button>Light CV</button>
+                    <button class="downloadbutton">Light CV</button>
                 </a>
                 <a href="Projects/Thomas Billett CV Dark.pdf" target="_blank" rel="noopener noreferrer">
-                    <button>Dark CV</button>
+                    <button class="downloadbutton">Dark CV</button>
                 </a>
             </div>
         </div>
