Rewrote introduction page, still in progress

--- a/Projects/Penumbra.html
+++ b/Projects/Penumbra.html
@@ -98,7 +98,7 @@
                     <ul>                     
                         <li><b>Enemy AI & Animations: </b> I created sword and axe enemy variant, hooked up animations and repurposed existing AI functionality
                             to create the final boss.</li>
-                        <li><b>Build Creation: </b>I was responsible for creating weekly builds, to ensure frequent playtesting.</li>
+                        <li><b>Build Creation: </b>I was in charge of creating weekly builds, this allowed us to get frequent playtesting</li>
                         <li><b>Trailer Materials: </b>I recorded gameplay footage, collected resources and materials for use in the trailer </li>
                         <li><b>Bugfixing: </b></li>
                     </ul>
