--- a/portfolio.html
+++ b/portfolio.html
@@ -59,9 +59,9 @@
 
             <a id="dissertation-anchor"></a>
             <div class="smallbox">
-                <h1>
-                    <span class="aligncenter">Dissertation - Perscription of AI difficulty</span>
-                </h1>
+                
+                <h1>Dissertation - Perception of AI difficulty</h1>
+                
                 <div class="container">
                     <a href="Projects/Dissertation.html">
                         <img src="Images/TutorialScreenshot.png" class="interactable" alt="AI Page">
