Improves readability of text on mobile, began adding to Boss AI section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="contact.html">Contact</a>
     </nav>
 </div>
-<footer class="footer">© 2023 Thomas Billett. All Rights Reserved.</footer>
+<footer class="footer">© 2024 Thomas Billett. All Rights Reserved.</footer>
 
 <body>
     <main id="swup" class="transition-fade">
@@ -85,7 +85,7 @@
 
                         <br>
 
-                        Collaborating with peers from diverse disciplines within the game development process has been a fundamental part of my degree, 
+                        Collaborating with my peers from diverse disciplines within the game development process has been a fundamental part of my degree, 
                         fostering my ability to seamlessly work alongside individuals with varying skill sets. My proficiency lies in C#, 
                         and I also possess a firm understanding of C++, leveraging these skills within the dynamic environments of Unity and Unreal Engine.
 
