Replace <br><hr><br> with a single hr class

--- a/about-me.html
+++ b/about-me.html
@@ -26,7 +26,7 @@
         <a href="contact.html">Contact</a>
     </nav>
 </div>
-<footer class="footer">© 2023 Thomas Billett. All Rights Reserved.</footer>
+<footer class="footer">© 2024 Thomas Billett. All Rights Reserved.</footer>
 
 <body>
     <main id="swup" class="transition-fade">
@@ -38,9 +38,8 @@
         </div>
 
 
-        <br>
-        <hr>
-        <br>
+            <hr class="hr-with-line-breaks">
+
 
         <div class="smallbox">
             <h1>Curriculum Vitae</h1>
@@ -55,9 +54,8 @@
         </div>
 
         
-        <br>
-        <hr>
-        <br>
+            <hr class="hr-with-line-breaks">
+
     
     </div>
     </main>
