--- a/portfolio.html
+++ b/portfolio.html
@@ -37,9 +37,7 @@
             <h1>Portfolio</h1>
         </div>
 
-            <br>           
-            <hr>
-            <br>
+            <hr class="hr-with-line-breaks">
 
             <div class="smallbox">
                 <h1>Solar Spark</h1>
@@ -53,9 +51,7 @@
                 </div> -->
             </div>
 
-            <br>
-            <hr>
-            <br>
+            <hr class="hr-with-line-breaks">
 
             <a id="dissertation-anchor"></a>
             <div class="smallbox">
@@ -69,9 +65,7 @@
                 </div>
             </div>
             
-            <br>
-            <hr>
-            <br>
+            <hr class="hr-with-line-breaks">
 
             <a id="penumbra-anchor"></a>
             <div class="smallbox">
@@ -82,6 +76,7 @@
                     </a> 
                 </div>
             </div>
+
         </main>
     </div>
 </body>
