--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <a class="active"  href="contact.html">Contact</a>
     </nav>
 </div>
-<footer class="footer">© 2023 Thomas Billett. All Rights Reserved.</footer>
+<footer class="footer">© 2024 Thomas Billett. All Rights Reserved.</footer>
 
 <body>
     <main id="swup" class="transition-fade">
@@ -38,7 +38,8 @@
         </div>
 
         <br>           
-        <hr>
+                    <hr class="hr-with-line-breaks">
+
         <br>
 
         <div class="smallbox">
