Improved formatting and made contact buttons consistent

--- a/index.html
+++ b/index.html
@@ -96,8 +96,27 @@
                     to innovative and captivating game development projects.
                     
                 </p>
-
             </div>
+
+            <!-- <hr class="hr-with-line-breaks">
+
+            <div class="smallbox l">
+                <p class="intro">
+                    Collaborating with my peers from diverse disciplines within the game development process has been a fundamental part of my degree, 
+                    fostering my ability to seamlessly work alongside individuals with varying skill sets. My proficiency lies in C#, 
+                    and I also possess a firm understanding of C++, leveraging these skills within the dynamic environments of Unity and Unreal Engine.
+                </p>
+            </div>
+
+            <hr class="hr-with-line-breaks">
+
+            <div class="smallbox l">
+                <p class="intro">
+                    Furthermore, my experience extends to utilizing Git for version control and strong understanding of the agile development methodology. 
+                    Ensuring the seamless management and coordination of collaborative projects. I am eager to channel my skills and passion into contributing
+                    to innovative and captivating game development projects.
+                </p>
+            </div> -->
 
             <hr class="hr-with-line-breaks">
         </div>
