--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             <a id="dissertation-anchor"></a>
             <div class="smallbox">
                 
-                <h1>Dissertation - Perception of AI difficulty</h1>
+                <h1>Dissertation - Perception of AI</h1>
                 
                 <div class="container">
                     <a href="Projects/Dissertation.html">
@@ -77,6 +77,7 @@
                 </div>
             </div>
 
+            <hr class="hr-with-line-breaks">
         </main>
     </div>
 </body>
