Wrote Penumbra section on Light Interaction mechanic

--- a/Projects/Penumbra.html
+++ b/Projects/Penumbra.html
@@ -96,7 +96,7 @@
                     <li><b>Build Creation: </b>I was in charge of creating weekly builds, this allowed us to get frequent playtesting</li>
                     <li><b>Trailer Materials: </b>I recorded gameplay footage, collected resources and materials for use in the trailer </li>
                     <li><b>Enemy Light Interaction: </b>Created the mechanic which determined whether enemies were in the light or dark. Altering their properties depending on their type (lumen/shade).</li>
-                    <li><b>Bugfixing: </b></li>
+                    <li><b>Bugfixing: </b>After playtesting sessions, all discovered bugs were allocated to me and the other programmers and swiftly fixed</li>
                 </ul>
 
                 <i>A more detailed version of my roles and contributions is further below</i>
@@ -130,26 +130,30 @@
         <hr class="hr-with-line-breaks">
 
         <div class="smallbox l">
-            <h3>Light Mechanic</h3>
+            <h3>Interaction Mechanic</h3>
             <p class="description">
-                To create the AI, I decided to use behaviour trees for the project. This was for several reasons:
-            </p>
-                <ul>
-                    <li>Ease of troubleshooting due to its visual nature.</li>
-                    <li>Modularity allows nodes to be interchanged to quickly create or modify behaviours.</li>
-                    <li>Familiarity with this approach.</li>
-                </ul>
-            <p class="description">
-                I used a package from the asset store to avoid having to create a behaviour tree system from scratch which would have taken precious time from the project <i>see below</i>                
-            </p>
+                This mechanic was responsible for making the shades(beings of dark) disappear when they entered any light source, only reappearing once exiting the source. While doing the inverse for the lumen(beings of light),
+                only when entering the light would the lumen become visible.
 
-            <h4>Find Player</h4>
-            <p class="description">
-                I began by creating a node which would detect the player, so that only enemies close to the player would engage. I went with a 'field of view' cone approach, by checking collisions
-                in sphere then checking if there is a valid angle to the player.
+                <br>
+                
+                This enabled interesting gameplay options, with another mechanic the light device. This device allowed the player to move
+                light sources in the level to other empty points.
 
+            <h4>Light Interaction</h4>
+            <p class="description">
+                First I created two different tags, one for shades and the other for lumen(light). Then I set the enemies to a default state, since all enemies did not start in a light source.
+                The shades were active by default, with the lumen being deactivated. Then once entering a light source, a collider would represent the area of that light. 
+                
+                <br>
+
+                Since the enemies were
+                already in the correct state, all that was needed was to invert the boolean. Activating the lumen, while deactivating the shade. The same function would be called once the enemies
+                left the light source.  
             </p>
         </div>
+
+        <hr class="hr-with-line-breaks">
 
     </div>
 </body>
