Updated Light CV, removed unfinished content

--- a/about-me.html
+++ b/about-me.html
@@ -44,12 +44,12 @@
         <div class="smallbox">
             <h1>Curriculum Vitae</h1>
             <div class="buttoncontainer">
-                <a href="Projects/Thomas Billett CV.pdf" target="_blank" rel="noopener noreferrer">
+                <a href="Projects/Thomas Billett CV Games Redacted.pdf" target="_blank" rel="noopener noreferrer">
                     <button class="downloadbutton">Light CV</button>
                 </a>
-                <a href="Projects/Thomas Billett CV Dark.pdf" target="_blank" rel="noopener noreferrer">
+                <!-- <a href="Projects/Thomas Billett CV Dark.pdf" target="_blank" rel="noopener noreferrer">
                     <button class="downloadbutton">Dark CV</button>
-                </a>
+                </a> -->
             </div>
         </div>
 
