--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,9 @@
                 <!-- <a href="https://twitter.com/"  target="_blank" rel="noopener noreferrer">
                     <button>Twitter</button>
                 </a> -->
-                <a href="https://github.com/LooseCann0n" target="_blank" rel="noopener noreferrer">
+                <!-- <a href="https://github.com/LooseCann0n" target="_blank" rel="noopener noreferrer">
                     <button class="downloadbutton">Github</button>                       
-                </a> 
+                </a>  -->
     
             </div>  
         </div>
